--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.datasource.password=password123
 spring.datasource.url=jdbc:sqlserver://localhost; databaseName=ecommerce; encrypt=true; trustServerCertificate=true;
 
 spring.jpa.hibernate.ddl-auto=update
+
+encryption.salt.rounds=10
+
+jwt.secret = SuperSecuredSecret
+
+jwt.issuer =eCommerce
+
+jwt.expiration=604800
