Added comments for clarification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 encryption.salt.rounds=10
 
-jwt.secret = SuperSecuredSecret
+jwt.secret = WhyFletch?
 
 jwt.issuer =eCommerce
 
